--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+    <meta name="description" content="A Hangman-inspired word game that puts Pat Sajak's head on a horse's body.">
+    <meta name="keywords" content="pat, sajak, pat sajak, horse, horseman, wheel of fortune, vanna white, wordnik, hangman, scrabble">
     <link rel="icon" href="<%= BASE_URL %>sajak-head.ico">
     <title>Sajak Horseman</title>
   </head>
